fix alignment

--- a/src/components/LoginView.css
+++ b/src/components/LoginView.css
@@ -29,6 +29,7 @@
     align-items: center;
     gap: 10px;
     margin: 0 auto;
+    width: 200px
 }
 
 .login-button:hover {
